; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_29781.c____hh.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_29781.c____hh.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IPPROTO_IPV6 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @___hh(i32 %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  store i32 4, i32* %7, align 4
  %8 = load i32, i32* %5, align 4
  store i32 %8, i32* inttoptr (i64 8 to i32*), align 4
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* @IPPROTO_IPV6, align 4
  %11 = load i32*, i32** %6, align 8
  %12 = bitcast i32* %11 to i8*
  %13 = call i32 @__f5(i32 %9, i32 %10, i32 59, i8* %12, i32* %7)
  ret i32 %13
}

declare dso_local i32 @__f5(i32, i32, i32, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
